--- a/css/styles.css
+++ b/css/styles.css
@@ -49,15 +49,15 @@ body{
 }
 
 #title-one {
-  background-color: #D59898;
+  background-color: #0000FF;
 } 
 
 #title-two{
-  background-color: #C14543;
+  background-color: #00FF00;
 }
 
 #title-three{
-  background-color: #E5D198;
+  background-color: #FF0000;
 }
 
 /* Simple Responsive Framework. */
